
SVN
----------------------
* Reset modified property to null if no modifications. Patch by Paul Hammant

UCM
----------------------
* Skip rmbranch and rmver events (CC-430). Patch by Olga Bondarchuk

reporting application
======================

index.jsp
----------------------
* Fix invalid comment syntax in index.jsp (CC-486). Reported by Andy Stevens

testdetails.xsl
----------------------
* Rewrite xsl to be more efficient. Submitted by Ivan Latysh

CruiseControl Release Notes - 2.5

general
======================
* Included build.xml target to create executable windows installer, from contrib definition (CC-314). Submitted by Julian Simpson. Should make CruiseControl-VER.exe available as a distribution.
* Updated Xerces (2.8) and Xalan (2.7) jars to fix memory leak (CC-426)

contrib
======================
* WindowsInstaller definition using nsis (CC-314). Submitted by Julian Simpson.
* Update DistributedBuildMaster to support instance reuse (CC-434). Submitted by Dan Rollo

build loop
======================
* Cleaned up incorrect usages of static SimpleDateFormats (CC-422). Proposed by Scott Coplin.
* Fixed recently introduced bug where project would keep on building with its overriden target when invoked once from the JMX interface using buildWithTarget.

Builder
----------------------
* Warn when given invalid value for day attribute.

ClearCaseBaselinePublisher:
----------------------
* New publisher for use with ClearCase UCM (CC-414). Submitted by Kevin Lee.

CruiseControlConfig:
----------------------
* On first load attempt to run projects in the same order they appear in config file. Patch by Olek

CruiseControlControllerAgent:
----------------------
* Look for an existing MBeanServer before creating a new one. This will make it possible to manage CC through Java 5's JConsole (CC-417). Patch by Gavin Kinghall Were.

ExecutePublisher:
----------------------
* No longer asynchronous (CC-280). Patch by Michael Kloss

LDAPMapper:
----------------------